# habitforge

./: .gitattributes  .gitignore  CLAUDE.md  dev.ps1
.claude/: settings.local.json
.github/workflows/: ci.yml
habitforge/: Makefile  README.md  package-lock.json  package.json
habitforge/backend/: .env.example  e2e_server.py  pyproject.toml  railway.toml  requirements.txt  seed.py
habitforge/backend/app/: database.py  deps.py  main.py  models.py  schemas.py
habitforge/backend/app/routers/: ai.py  completions.py  habits.py  notes.py  push.py  todos.py
habitforge/backend/app/services/: push_sender.py  reminder_scheduler.py  streak.py
habitforge/backend/tests/: conftest.py  test_api_contracts.py  test_habits_api.py  test_push_sender.py  test_reminder_scheduler.py  test_streaks.py
habitforge/frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
habitforge/frontend/e2e/: habitforge.spec.ts
habitforge/frontend/src/: App.js  App.tsx  index.css  main.js  main.tsx  sw.js  sw.ts
habitforge/frontend/src/components/: BottomNav.js  BottomNav.tsx  Navbar.js  Navbar.tsx  PullToRefresh.tsx
habitforge/frontend/src/components/ui/: Badge.js  Badge.tsx  Button.js  Button.tsx  Card.js  Card.tsx  Input.js  (+5 more)
habitforge/frontend/src/lib/: AuthBridge.tsx  api.js  api.test.ts  api.ts  sentry.ts  types.ts  useBackDismiss.ts  useKeyboardShortcuts.js  useKeyboardShortcuts.ts  usePushActionBridge.ts  utils.js  utils.ts
habitforge/frontend/src/pages/: DashboardPage.js  DashboardPage.tsx  HabitDetailPage.js  HabitDetailPage.tsx  HabitsPage.js  HabitsPage.tsx  LandingPage.tsx  NotesPage.js  NotesPage.tsx  TodosPage.js  TodosPage.tsx
habitforge/frontend/src/test/: render.tsx  setup.ts
(+28 files in other folders)
