[project]
name = "habitforge"
version = "0.1.0"
description = "Personal habit tracker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "pywebpush>=2.0.3",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dateutil>=2.9",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
    "sentry-sdk[fastapi]>=2.0",
    "apscheduler>=3.10",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "app/routers/completions.py",
    "app/routers/habits.py",
    "app/routers/notes.py",
    "app/routers/push.py",
    "app/routers/todos.py",
]
